[gd_scene load_steps=9 format=2]

[ext_resource path="res://Score.tscn" type="PackedScene" id=1]
[ext_resource path="res://Celinha.tscn" type="PackedScene" id=2]
[ext_resource path="res://Skin.gd" type="Script" id=3]
[ext_resource path="res://assets/background.jpg" type="Texture" id=4]
[ext_resource path="res://assets/body/skin.png" type="Texture" id=5]
[ext_resource path="res://PauseOrgan.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/pause.png" type="Texture" id=7]
[ext_resource path="res://BadMolecule.tscn" type="PackedScene" id=9]

[node name="Skin" type="Node2D"]
scale = Vector2( 1, 0.989981 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 405.0 ],
"_edit_vertical_guides_": [ -138.0, 758.0 ]
}
badMolecule = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 514, 303.923 )
scale = Vector2( 0.157846, 0.135187 )
texture = ExtResource( 4 )

[node name="SkinRigidBody" type="StaticBody2D" parent="."]
light_mask = 6
position = Vector2( 410, 38.3846 )
scale = Vector2( 0.921331, 1.02937 )
collision_layer = 4
collision_mask = 0

[node name="SkinImage" type="Sprite" parent="SkinRigidBody"]
position = Vector2( -67.9192, 229.195 )
scale = Vector2( 1.51337, 1.55042 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SkinRigidBody"]
position = Vector2( 77.0624, 276.726 )
scale = Vector2( 49.8372, 28.1102 )
build_mode = 1
polygon = PoolVector2Array( -6.66911, -8.63877, -6.66911, 5.0959, -2.43568, 8.49317, 6.90108, 8.29904, 7.05628, -5.55053, -2.46098, -5.58543 )

[node name="Position" type="Position2D" parent="SkinRigidBody/CollisionPolygon2D"]
position = Vector2( 5, -4.5 )
scale = Vector2( 0.0289961, 0.0485324 )

[node name="Position2" type="Position2D" parent="SkinRigidBody/CollisionPolygon2D"]
position = Vector2( -0.261353, -3.77016 )
scale = Vector2( 0.0289961, 0.0485324 )

[node name="Position3" type="Position2D" parent="SkinRigidBody/CollisionPolygon2D"]
position = Vector2( 2, 7 )
scale = Vector2( 0.0289961, 0.0485324 )

[node name="Position4" type="Position2D" parent="SkinRigidBody/CollisionPolygon2D"]
position = Vector2( -3, 6 )
scale = Vector2( 0.0289961, 0.0485324 )

[node name="Position5" type="Position2D" parent="SkinRigidBody/CollisionPolygon2D"]
position = Vector2( 6, 3 )
scale = Vector2( 0.0289961, 0.0485324 )

[node name="Position6" type="Position2D" parent="SkinRigidBody/CollisionPolygon2D"]
position = Vector2( -6, -3 )
scale = Vector2( 0.0289961, 0.0485324 )

[node name="Position7" type="Position2D" parent="SkinRigidBody/CollisionPolygon2D"]
position = Vector2( -6, -7 )
scale = Vector2( 0.0289961, 0.0485324 )

[node name="Celinha" parent="." instance=ExtResource( 2 )]
position = Vector2( 246, 325.259 )

[node name="ReturnButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 42.0
text = "VOLTAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="." instance=ExtResource( 1 )]
position = Vector2( 79, -111.113 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 904.0
margin_top = 485.0
margin_right = 1428.0
margin_bottom = 1003.0
rect_scale = Vector2( 0.212715, 0.219896 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 6 )]

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="PauseButton" to="CanvasLayer/Pause" method="_on_PauseButton_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
